force-app/main/default/objects/Subject__c/Subject__c.object-meta.xml
<CustomObject>
    <label>Subject</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Subject Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>