force-app/main/default/objects/Subject__c/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Subjects</relationshipLabel>
    <relationshipName>Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>