force-app/main/default/objects/Subject__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Subjects</relationshipLabel>
    <relationshipName>Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>