force-app/main/default/objects/Subject__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Subjects</relationshipLabel>
    <relationshipName>Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>