force-app/main/default/objects/Subject__c/listViews/Subject_Name.listView-meta.xml
<ListView>
    <fullName>Subject_Name</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Subject Name</label>
</ListView>